<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <groupId>java25update</groupId>
    <artifactId>parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>01-Paving-the-on-Ramp</module>
        <module>02-Virtual-Threads</module>
        <module>03-Pattern-Matching</module>
        <module>04-Stream-Gatherers</module>
    </modules>

    <name>Java 25 Update Workshop Parent</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>25</maven.compiler.release>
		<maven.compiler.enablePreview>true</maven.compiler.enablePreview>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
			    <groupId>org.junit</groupId>
			    <artifactId>junit-bom</artifactId>
			    <version>6.0.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>			
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>25</source>
					<target>25</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>--enable-preview</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
